# stroke_prediction

./: .gitignore  README.md  app.py  main5.py  pyproject.toml  routes.py  run.py
NonStroke/: img_0021.txt  img_0024.txt  img_0025.txt  img_0030.txt  img_0031.txt  img_0033.txt  img_0039.txt  img_0041.txt  img_0043.txt  img_0044.txt  img_0048.txt  img_0052.txt  img_0058.txt  img_0061.txt  img_0065.txt  img_0066.txt  img_0069.txt  img_0070.txt  img_0072.txt  img_0073.txt  img_0075.txt  img_0076.txt  img_0080.txt  img_0083.txt  img_0084.txt  img_0085.txt  img_0086.txt  img_0087.txt  img_0089.txt  img_0092.txt  img_0096.txt  img_0097.txt  img_0101.txt  img_0105.txt  img_0111.txt  img_0113.txt  img_0114.txt  img_0116.txt  img_0117.txt  img_0119.txt  (+1346 more)
Stroke/: img_0023.txt  img_0028.txt  img_0029.txt  img_0038.txt  img_0040.txt  img_0042.txt  img_0045.txt  img_0050.txt  img_0053.txt  img_0057.txt  img_0059.txt  img_0062.txt  img_0064.txt  img_0091.txt  img_0107.txt  img_0115.txt  img_0121.txt  img_0126.txt  img_0137.txt  img_0138.txt  img_0147.txt  img_0159.txt  img_0161.txt  img_0165.txt  img_0176.txt  img_0179.txt  img_0181.txt  img_0204.txt  img_0216.txt  img_0227.txt  img_0228.txt  img_0230.txt  img_0232.txt  img_0237.txt  img_0244.txt  img_0252.txt  img_0259.txt  img_0261.txt  img_0267.txt  img_0273.txt  (+682 more)
static/: README.md
static/css/: style.css
static/js/: app.js
stroke_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
templates/: base.html  index.html
